<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.paciente.CadUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nome" />
    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CPF" />
    <EditText
        android:id="@+id/etCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Senha" />
    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <TextView
        android:id="@+id/textViewSx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sexo" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opcoes_sexo" />

        <CheckBox
            android:id="@+id/cbAceite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Aceito_os_termos" />
        <Button
            android:id="@+id/btSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salvar" />


    </LinearLayout>
    </ScrollView>
</FrameLayout>